--- a/NSFPostdoc_Outline.Rmd
+++ b/NSFPostdoc_Outline.Rmd
@@ -88,7 +88,7 @@ knitr::include_graphics("/Users/Ian/Google.Drive/PostDoc_Applications/RASE_diagr
 
 
 #### Objective 3: Can we build an extensive ecological dataset of Australian reptiles on a continental scale?
-Existing eco-morphological databases cover much of the Australian vertebrate fauna, including mammals (cite Pantheria) and birds (Garnett et al., 2014; EltonTraits), but reptile taxa remain poorly represented (Meiri, 2018). This is surprising given the number of studies of Australian reptile phylogenetics, ecology, and morphology, and remarkable museum collections. In association with the **Atlas of Living Australia** initiative, I intend to collate existing, undatabased ecological and morphological information with newly collected data, to span the entirety of Australian reptile taxa (>1000 species). In a departure from traditional databasing methods, I hope to include measurements, observations, and metadata for all viewed specimens. My hope is that instead of summarizing this information to species means, I can contribute a database which is more flexible to taxonomic changes and better describes intraspecific variation (Troudet etal.2018). As a current research associate of the Western Australian Museum (130,000+ reptile records) and a proposed associate of the South Australian Museum (55,000+ reptile records), I would have access to sampling for the entirety of the continent, making this type of data collection feasible. A resource of this kind would be a world-first, providing invaluable information to future researchers, and returning inalienable data to museums about their own collections.   
+Existing eco-morphological databases cover much of the Australian vertebrate fauna, including mammals (cite Pantheria) and birds (Garnett et al., 2014; EltonTraits), but reptile taxa remain poorly represented (Meiri, 2018). This is surprising given the number of studies of Australian reptile phylogenetics, ecology, and morphology, and remarkable museum collections. In association with the **Atlas of Living Australia** (ALA), I intend to collate existing, undatabased ecological and morphological information with newly collected data, to span the entirety of Australian reptile taxa (>1000 species). The ALA provides a portal for interacting with museum and citizen-scientist records of Australian organismal diversity, comprising 78,492,847 records of 123,364 species. Native reptiles account for over 1 million of these records, which include important spatial, temporal, and taxonomic information about these taxa. Noticeably absent however, are phenotypic data for any of the 500,000+ reptiles in museum collections. In a departure from existing databasing methods, I hope to integrate morphological and ecological data, along with metadata for all viewed specimens back into the ALA database. My hope is that instead of summarizing this information to species means, I can contribute a database which is more flexible to taxonomic changes and better describes intraspecific variation (Troudet etal.2018). As a current research associate of the Western Australian Museum (130,000+ reptile records) and a proposed associate of the South Australian Museum (55,000+ reptile records), I would have access to sampling for the entirety of the continent, making this type of data collection feasible. A resource of this kind would be a world-first, providing invaluable information to future researchers, and returning inalienable data to museums about their own collections.   
 
 #### Objective 4: Is competitive signal identifiable from phenotypic and spatial data of Australian reptiles?
 This question represents the synthesis of the three previous objectives. Broadly, my intention is to develop methods that may be of interest to other researchers studying macroevolution and macroecology. However, it is also important to ask these questions empirically, **by employing existing biological collections**. Australian reptiles are particularly well suited for these objectives because they represent a number of species rich, eco-morphologically diverse, endemic radiations. Building on phylogenomic research from my PhD and others, we now have strong species-level time-calibrated phylogenetic hypotheses for nearly all continental reptile groups (*citations*). This makes macroevolutionary inferences tractable. The Atlas of Living Australia also provides an unparalleled resource for species distributions based on museum occurrence records, for all described taxa. Given existing data and resources, and the access to material, I *honestly* believe that this is one of the best possible system to focus this research on. 
@@ -97,6 +97,9 @@ This question represents the synthesis of the three previous objectives. Broadly
 Phylogenetic comparative methods are undergoing a period of rapid growth, largely as a result of bigger and more complete phylogenies, and the popularity of computational biology. Macroevolutionary research is also popular in science media because many of its inferences are intuitive and exciting. My proposed research builds on existing ecological theory and macroevolutionary methods, synthesizing the two. I anticipate that the output of this project will be valuable both empirically and methodologically. The construction of an ecomorphological database will provide a resource for a diverse array of biologists working from population to macroevolutionary scales. The comparative ABC method design will also make available a generalizable framework for creating evolutionary models.
 
 ## Training Objectives
+Evolutionary biology is increasingly intersecting with computational biology. To expand my versatility in phylogenetic comparative methods, I aim to first extend my abilities in statistical modelling. This means strengthening the connection between theoretical understanding and computational implementation of macroevolutionary processes. I have carefully chosen two sponsors who are experts in these fields, and in bridging the divide between them, bringing together the conceptual and empirical. 
+
+As a self-taught coder, there remain a number of shortcomings in my computational abilities, particularly in efficiency. Dr. O'Meara is a 
 
 ## Career Development
 
